--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 	id 'com.diffplug.spotless' version '6.20.0'
 	id 'nu.studer.jooq' version '8.2'
 	id 'com.bmuschko.docker-remote-api' version '9.3.2'
+	id 'org.flywaydb.flyway' version '9.22.0'
 }
 
 group = 'com.czosnek'
@@ -40,6 +41,7 @@ dependencies {
 	testImplementation 'io.rest-assured:rest-assured:5.3.1'
 	testImplementation "org.testcontainers:postgresql:1.19.0"
 	implementation 'com.zaxxer:HikariCP:5.0.1'
+	implementation 'org.flywaydb:flyway-core:9.22.0'
 }
 
 tasks.named('test') {
