--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.6.0'
 	implementation 'org.jooq:jooq:3.18.6'
 	testImplementation 'io.rest-assured:rest-assured:5.3.1'
-	testImplementation "org.testcontainers:postgresql:1.19.0"
+	implementation 'org.testcontainers:postgresql:1.19.0'
 	implementation 'com.zaxxer:HikariCP:5.0.1'
 	implementation 'org.flywaydb:flyway-core:9.22.0'
 }
