--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ spotless {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.postgresql:postgresql:42.6.0'
 	implementation 'org.jooq:jooq:3.18.6'
 	testImplementation 'io.rest-assured:rest-assured:5.3.1'
