--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 	implementation 'com.zaxxer:HikariCP:5.0.1'
 	implementation 'org.flywaydb:flyway-core:9.22.0'
 	jooqGenerator 'org.postgresql:postgresql:42.6.0' // REQUIRED!!
+	testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 tasks.named('test') {
