--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.postgresql:postgresql:42.6.0'
 	implementation 'org.jooq:jooq:3.18.6'
 	testImplementation 'io.rest-assured:rest-assured:5.3.1'
@@ -60,6 +61,9 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core:9.22.0'
 	jooqGenerator 'org.postgresql:postgresql:42.6.0' // REQUIRED!!
 	testImplementation 'org.hamcrest:hamcrest:2.2'
+	implementation 'org.testcontainers:vault:1.19.0'
+	implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'io.github.jopenlibs:vault-java-driver:6.1.0'
 }
 
 tasks.named('test') {
